--- a/css/style.css
+++ b/css/style.css
@@ -127,9 +127,9 @@ img {
   padding-top: 14px;
   padding-bottom: 51px;
   background-color: #f7e296;
-  box-shadow: inset 0px 38px 0px 0px #fff,
-  inset -20px 0px 0px 0px #fff,
-  inset 20px 0px 0px 0px #fff;
+  box-shadow: inset 0 38px 0 0 #fff,
+  inset -20px 0 0 0 #fff,
+  inset 20px 0 0 0 #fff;
 }
 
 .logo {
@@ -377,7 +377,7 @@ header .main-menu-item:nth-child(4) {
   padding-bottom: 88px;
   box-shadow: inset -20px 0 0 0 #fff,
   inset 20px 0 0 0 #fff,
-  inset 0px 109px 0px 0px #f7e296;
+  inset 0 109px 0 0 #f7e296;
 }
 
 .promo-slider {
