--- a/css/style.css
+++ b/css/style.css
@@ -388,9 +388,9 @@ header .main-menu-item:nth-child(4) {
   display: none;
 }
 
-#promo-slide1:checked ~ .promo-list .promo-item:nth-child(1),
-#promo-slide2:checked ~ .promo-list .promo-item:nth-child(2),
-#promo-slide3:checked ~ .promo-list .promo-item:nth-child(3) {
+.promo-slide1:checked ~ .promo-list .promo-item:nth-child(1),
+.promo-slide2:checked ~ .promo-list .promo-item:nth-child(2),
+.promo-slide3:checked ~ .promo-list .promo-item:nth-child(3) {
   display: flex;
 }
 
@@ -533,9 +533,9 @@ header .main-menu-item:nth-child(4) {
   margin-right: 0;
 }
 
-#promo-slide1:checked ~ .promo-active label:nth-child(1),
-#promo-slide2:checked ~ .promo-active label:nth-child(2),
-#promo-slide3:checked ~ .promo-active label:nth-child(3) {
+.promo-slide1:checked ~ .promo-active label:nth-child(1),
+.promo-slide2:checked ~ .promo-active label:nth-child(2),
+.promo-slide3:checked ~ .promo-active label:nth-child(3) {
   background: url(../img/slider-button-on.svg) no-repeat;
   background-size: contain;
 }
@@ -662,17 +662,17 @@ header .main-menu-item:nth-child(4) {
   width: 160px;
 }
 
-#services-slide1:checked ~ .services-active p:nth-child(1) .btn,
-#services-slide2:checked ~ .services-active p:nth-child(2) .btn,
-#services-slide3:checked ~ .services-active p:nth-child(3) .btn {
+.services-slide1:checked ~ .services-active p:nth-child(1) .btn,
+.services-slide2:checked ~ .services-active p:nth-child(2) .btn,
+.services-slide3:checked ~ .services-active p:nth-child(3) .btn {
   color: #f7e184;
   background-image: none;
   background-color: #000;
 }
 
-#services-slide1:checked ~ .services-active p:nth-child(1),
-#services-slide2:checked ~ .services-active p:nth-child(2),
-#services-slide3:checked ~ .services-active p:nth-child(3) {
+.services-slide1:checked ~ .services-active p:nth-child(1),
+.services-slide2:checked ~ .services-active p:nth-child(2),
+.services-slide3:checked ~ .services-active p:nth-child(3) {
   background-color: #000;
 }
 
