--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ img {
   display: inline-block;
   width: 220px;
   padding: 8px 0;
+  vertical-align: middle;
   text-align: center;
   background-image: linear-gradient(to bottom, transparent 16px, #f0c52e 16px, #f0c52e 24px, transparent 24px);
   border: none;
@@ -515,11 +516,12 @@ header .main-menu-item:nth-child(4) {
 .promo-active label {
   position: relative;
   display: inline-block;
+  width: 12px;
+  height: 12px;
   margin: 0;
   margin-right: 15px;
   font-size: 0;
-  width: 12px;
-  height: 12px;
+  vertical-align: middle;
   background: url(../img/slider-button-off.svg) no-repeat;
   background-size: contain;
   cursor: pointer;
@@ -981,15 +983,15 @@ header .main-menu-item:nth-child(4) {
 @keyframes bounce {
   0% {
     transform: translateY(-2000px);
-  }  
-    70% {
-    transform: translateY(-47%);  
-  }  
-    90% {
-    transform: translateY(-53%);   
-  }  
-    100% {
-    transform: translateY(-50%);    
+  }
+  70% {
+    transform: translateY(-47%);
+  }
+  90% {
+    transform: translateY(-53%);
+  }
+  100% {
+    transform: translateY(-50%);
   }
 }
 
@@ -997,7 +999,7 @@ header .main-menu-item:nth-child(4) {
   0%,
   100% {
     transform: translate(0, -50%);
-  }  
+  }
   10%,
   30%,
   50%,
@@ -1027,7 +1029,7 @@ header .main-menu-item:nth-child(4) {
 
 .modal-show {
   display: block;
-  
+
   animation: bounce 0.6s;
 }
 
@@ -1153,7 +1155,7 @@ header .main-menu-item:nth-child(4) {
 
 .modal-map iframe {
   position: relative;
-  z-index: 3;  
+  z-index: 3;
   border: none;
 }
 
