--- a/css/style.css
+++ b/css/style.css
@@ -557,6 +557,7 @@ header .main-menu-item:nth-child(4) {
 .popular-product-list {
   display: flex;
   justify-content: space-between;
+  flex-grow: 1;
 }
 
 .popular-product-item {
